# capstone-california-housing

./: .dockerignore  Dockerfile  README.md  baseline_model.pkl  generate_eda_plots.py  lasso_model.pkl  main.py  model.pkl  nn_model.pkl  predict.py  project.ipynb  pyproject.toml  requirements.txt  ridge_model.pkl  train.py
aws-deployment/: Dockerfile.lambda  README.md  buildspec.yml  deploy_lambda.sh  deploy_website.sh  fix_function_url_complete.sh  index.html  lambda_handler.py  setup_codebuild_direct.sh
