[project]
name = "capstone-california-housing"
version = "0.1.0"
description = "Capstone project for Machine Learning Zoomcamp Cohort 2025 - California Housing Data analysis"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.0",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "uvicorn>=0.39.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
]
